--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "wordguess"
 version = "0.1.0"
 description = "An interactive web application to solve word puzzles like Wordle."
 authors = ["Martin Wilsdorf <de.marwils@gmail.com>"]
-license = "Apache License 2.0"
+license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
