--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ python = "^3.10"
 Django = "^4.1"
 
 [tool.poetry.dev-dependencies]
+pytest-django = "^4.5.2"
+pytest-cov = "^3.0.0"
+pre-commit = "^2.20.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
