--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,5 @@
 {
   "python.analysis.indexing": true,
-  "python.linting.pylintEnabled": true,
   "python.linting.flake8Enabled": true,
   "python.linting.enabled": true,
   "python.formatting.provider": "black",
@@ -9,4 +8,7 @@
     "--max-line-length=119"
   ],
   "editor.tabSize": 4,
+  "python.testing.pytestPath": "pytest",
+  "python.testing.pytestEnabled": true,
+  "python.testing.unittestEnabled": false,
 }
