--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,4 +11,7 @@
   "python.testing.pytestPath": "pytest",
   "python.testing.pytestEnabled": true,
   "python.testing.unittestEnabled": false,
+  "python.testing.pytestArgs": [
+    "-s"
+  ],
 }
